pulldown-cmark-mdcat/tests/snapshots/render/ansi@commonmark-spec-148-html_blocks.snap
---
source: pulldown-cmark-mdcat/tests/render.rs
assertion_line: 123
expression: "render_to_string(markdown_file, &ansi_settings)"
input_file: pulldown-cmark-mdcat/tests/markdown/commonmark-spec/148-html_blocks.md
---
[32m<table><tr><td>
[0m[32m<pre>
[0m[32m**Hello**,
[0m
[3mworld[0m.[32m </pre>[0m

[32m</td></tr></table>
[0m
